# hobbies

OpenAI/agentSDK/: README.md  main-gradio_with_logs.py  main-test_template.py  pyproject.toml
OpenAI/gpt-5/: README.md  main.py  new_param-freeform_function_calling.py  new_param-verbosity.py  pyproject.toml
gemini/gemini-veo/: README.md  main.py  pyproject.toml
gemini/nano-banana/: README.md  main.py  pyproject.toml
gemini/nano-banana/guides/: 02-use-nano-banana.ipynb
video_classifier/: README.md  prompts.py  pyproject.toml  vc_1_metaprompt.ipynb  vc_2_download_YT_video.ipynb  vc_3_inference.ipynb
