[project]
name = "v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "jupyterlab>=4.4.5",
    "openai>=1.99.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pysubs2>=1.8.0",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.7.21",
]
